--- a/landing/index.html
+++ b/landing/index.html
@@ -45,7 +45,7 @@
 
         <div class="container-full landcolor" id="land">
             <div class="row">
-                 <div class="col-lg-12 text-center aho" style="margin-top:4%;">
+                 <div class="col-lg-12 text-center aho" style="margin-top:2%;">
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <img width=300pt alt="FreeJaus EUITI Bilbao IITUE" src="fj-lwhite.png"> </a>
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <h1>Social Learning Environment</h1> </a>
                     <a alt="Gu&iacute;a para la creaci&oacute;n de espacios de coordinaci&oacute;n-aprendizaje cooperativo en el &aacute;mbito de un centro universitario" href="#guide"> <p class="lead">espacio abierto, colaborativo, replicable y autogestionado</p> </a>
@@ -58,7 +58,7 @@
                     <a target="_blank" href="https://vimeo.com/FreeJaus"><i class="fa fa-vimeo-square"></i></a>
                 </div>
             </div>
-            <div style="font-size:45pt; margin-top:6%" class="col-lg-12 text-center aho">
+            <div style="font-size:45pt" class="col-lg-12 text-center aho">
                 <a href="#panels"><i class="fa fa-angle-double-down"></i></a>
             </div>
         </div><!-- /container full -->
