--- a/landing/index.html
+++ b/landing/index.html
@@ -43,14 +43,15 @@
 
 <!--FJ CABECERA A PÁGINA COMPLETA -->
 
+
         <div class="container-full landcolor" id="land">
-            <div class="row">
-                 <div class="col-lg-12 text-center aho" style="margin-top:2%;">
+             <div class="row">
+                <div class="col-lg-12 text-center aho" style="margin-top:2%;">
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <img width=300pt alt="FreeJaus EUITI Bilbao IITUE" src="fj-lwhite.png"> </a>
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <h1>Social Learning Environment</h1> </a>
                     <a alt="Gu&iacute;a para la creaci&oacute;n de espacios de coordinaci&oacute;n-aprendizaje cooperativo en el &aacute;mbito de un centro universitario" href="#guide"> <p class="lead">espacio abierto, colaborativo, replicable y autogestionado</p> </a>
                 </div>
-                 <div style="margin-top:2%; font-size:45pt;" class="col-lg-12 text-center social">
+                <div style="margin-top:2%; font-size:45pt;" class="col-lg-12 text-center social">
                     <a target="_blank" href="http://github.com/FreeJaus"><i class="fa fa-github"></i></a>
                     <a target="_blank" href="http://twitter.com/FreeJaus"><i class="fa fa-twitter"></i></a>
                     <a target="_blank" href="https://www.youtube.com/user/FreeJaus"><i class="fa fa-youtube"></i></a>
@@ -58,7 +59,7 @@
                     <a target="_blank" href="https://vimeo.com/FreeJaus"><i class="fa fa-vimeo-square"></i></a>
                 </div>
             </div>
-            <div style="font-size:45pt" class="col-lg-12 text-center aho">
+            <div style="font-size:45pt;" class="col-lg-12 text-center aho">
                 <a href="#panels"><i class="fa fa-angle-double-down"></i></a>
             </div>
         </div><!-- /container full -->
