--- a/landing/index.html
+++ b/landing/index.html
@@ -46,13 +46,13 @@
 
         <div class="container-full landcolor" id="land">
              <div class="row">
-                <div class="col-lg-12 text-center aho" style="margin-top:10%;margin-bot:5%">
+                <div class="col-lg-12 text-center aho" style="margin-top:8%;margin-bot:5%">
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <img width=300pt alt="FreeJaus EUITI Bilbao IITUE" src="fj-lwhite.png"> </a>
                     <a alt="Página de noticias" href="http://news.freejaus.com/"> <h1>Social Learning Environment</h1> </a>
                     <a alt="Gu&iacute;a para la creaci&oacute;n de espacios de coordinaci&oacute;n-aprendizaje cooperativo en el &aacute;mbito de un centro universitario" href="#guide"> <p class="lead">espacio abierto, colaborativo, replicable y autogestionado</p> </a>
                 </div>
             </div>
-            <div style="font-size:45pt;margin-bot:0%, margin-top:5%" class="col-lg-12 text-center aho">
+            <div style="font-size:45pt; margin-top:5%" class="col-lg-12 text-center aho">
                 <div style="margin-top:0%; font-size:45pt;" class="col-lg-12 text-center social">
                     <a target="_blank" href="http://github.com/FreeJaus"><i class="fa fa-github"></i></a>
                     <a target="_blank" href="http://twitter.com/FreeJaus"><i class="fa fa-twitter"></i></a>
